prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-prometheus
  namespace: kube-prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: prometheus-ts-sharedplatform-rck-nonprod.services.west.nonprod.wsgc.com
      http:
        paths:
        - backend:
            serviceName: prometheus-server
            servicePort: 9090
          path: /
  tls:
  - hosts:
    - prometheus-ts-sharedplatform-rck-nonprod.services.west.nonprod.wsgc.com
